fixed the flash styling, aligned the error messages and stopped them from displaying in capitals, removed an un-used styling from the css file

--- a/app/stylesheets/partials/_form.sass
+++ b/app/stylesheets/partials/_form.sass
@@ -1,12 +1,7 @@
 form.data_response, .basic_form
   .dashboard_section
     background: $filler
-  
-  .aligned_with_stuff
-    margin-left: 170px
-    color: #425160
-    font-size: 12px
-  
+    
   ol
     li
       border-bottom: 1px solid $lightest-blue
@@ -77,9 +72,8 @@ form.data_response, .basic_form
       float: left
       font-size: 11px
       margin-top: 3px
-      margin-left: 15%
+      margin-left: 17%
       padding-left: 10px
-      text-transform: uppercase
       width: 70%
 
 
